# metamodule-studio-six

./: .gitmodules  CMakeLists.txt  plugin-mm.json
metamodule-plugins/: StudioSixPlusOne.mmplugin
